# rust-yew-boilerplate

./: Cargo.toml  LICENSE  index.html  readme.md  tailwind.config.js  trunk.toml
src/: main.rs
src/components/: button.rs
src/screens/: counter.rs  not_found.rs
src/styles/: output.css
